@@ -1,12 +1,16 @@
+Build.PL
 Changes
 MANIFEST
 Makefile.PL
 README
-Shell.pm
+examples/old-test.pl
 examples/psh.pl
+inc/Test/Run/Builder.pm
+lib/Term/Shell.pm
 lib/Term/Shell.pod
-test.pl
 t/01require.t
 t/02default.t
 t/03catchsmry.t
+t/pod.t
 META.yml                                 Module meta-data (added by MakeMaker)
+META.json
