@@ -1,0 +1,65 @@
+{
+   "abstract" : "A simple command-line shell framework.",
+   "author" : [
+      "Shlomi Fish <shlomif@cpan.org>"
+   ],
+   "dynamic_config" : 1,
+   "generated_by" : "Module::Build version 0.3901, CPAN::Meta::Converter version 2.120921",
+   "keywords" : [
+      "console",
+      "readline",
+      "shell",
+      "term",
+      "terminal"
+   ],
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Term-Shell",
+   "prereqs" : {
+      "build" : {
+         "requires" : {
+            "Test" : "0",
+            "Test::More" : "0",
+            "vars" : "0"
+         }
+      },
+      "configure" : {
+         "requires" : {
+            "Module::Build" : "0"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Data::Dumper" : "0",
+            "Term::ReadLine" : "0",
+            "strict" : "0",
+            "warnings" : "0"
+         }
+      }
+   },
+   "provides" : {
+      "Term::Shell" : {
+         "file" : "lib/Term/Shell.pm",
+         "version" : "0.03"
+      },
+      "Term::Shell::OnScopeLeave" : {
+         "file" : "lib/Term/Shell.pm",
+         "version" : 0
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "license" : [
+         "http://dev.perl.org/licenses/"
+      ],
+      "repository" : {
+         "url" : "https://github.com/shlomif/Term-Shell"
+      }
+   },
+   "version" : "0.03"
+}
