@@ -1,10 +1,39 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Term-Shell
-version:      0.02
-version_from: Shell.pm
-installdirs:  site
+---
+abstract: 'A simple command-line shell framework.'
+author:
+  - 'Shlomi Fish <shlomif@cpan.org>'
+build_requires:
+  Test: 0
+  Test::More: 0
+  vars: 0
+configure_requires:
+  Module::Build: 0
+dynamic_config: 1
+generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120921'
+keywords:
+  - console
+  - readline
+  - shell
+  - term
+  - terminal
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Term-Shell
+provides:
+  Term::Shell:
+    file: lib/Term/Shell.pm
+    version: 0.03
+  Term::Shell::OnScopeLeave:
+    file: lib/Term/Shell.pm
+    version: 0
 requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  Data::Dumper: 0
+  Term::ReadLine: 0
+  strict: 0
+  warnings: 0
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: https://github.com/shlomif/Term-Shell
+version: 0.03
